style.css
/* ... */
#postpage #main ul#postlist li ul li {
	border-width: 1px 0 0;
	margin-top: 0;
	padding-top: 14px;
}
.postcontent h1, .commentcontent h1,
.postcontent h2, .commentcontent h2,
.postcontent h3, .commentcontent h3,
.postcontent h4, .commentcontent h4,
.postcontent h5, .commentcontent h5,
.postcontent h6, .commentcontent h6 {
	margin-top: .3em;
	margin-bottom: .3em;
	padding: 5px 0;
}
.no-posts {
	padding: 2em !important;
}
div.entry {
	margin-right: 248px; /* compensate for sidebar */
	height: auto;
}
.attachment div.entry {
	margin-right: 0;
}
.navigation {
	clear: both;
	overflow: hidden;
}
.navigation p {
	float: left;
	width: 50%;
}
.navigation p.nav-newer {
	float: right;
	text-align: right;
}
.attachment .navigation {
	border-top: 0;
	clear: left;
	margin-bottom: 20px;
}
.discussion p img {
	padding: 0 !important;
	border: none !important;
	margin-right: 0 !important;
}
.discussion p {
	margin-bottom: 0;
}
.p2-recent-comments .avatar {
	margin-right: 8px;
	margin-bottom: 4px;
}
#post-types {
	float: left;
	list-style: none;
	margin-left: 60px;
	margin-bottom: 10px;
	width: 650px;
}
#post-types:after {
	clear: both;
	content: '';
	display: block;
}
#post-types li {
	float: left;
	margin-right: 5px;
}
#post-types li a {
	border-style: solid;
	border-top-width: 1px;
	border-left-width: 1px;
	border-right-width: 2px;
	border-bottom-width: 2px;
	padding: 4px 6px;
	border-color: #eee;
	border-top-color: #f5f5f5;
	border-left-color: #f5f5f5;
	float: left;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	background: #fafafa;
}
#post-types li a:active {
	border-top-width: 2px;
	border-left-width: 2px;
	border-right-width: 1px;
	border-bottom-width: 1px;
	background-color: #eee;
}
#post-types li a.selected {
	cursor: default;
}
.post-format-button:before {
	background: url( i/icons.png ) no-repeat;
	float: left;
	content: '';
	margin-right: 5px;
	width: 16px;
	height: 16px;
}
#post-types #post:before {
	background-position: -200px center;
}
#post-types #quote:before {
	background-position: -400px center;
}
#post-types #link:before {
	background-position: -600px center;
}
#cat-types {
	list-style: none;
	margin: 0 0 10px 0;
	padding: 0;
}
#cat-types:after {
	clear: both;
	content: '';
	display: block;
}
#cat-types li {
	float: left;
	margin: 0 5px 4px 0;
}
#cat-types li a {
	border-style: solid;
	border-top-width: 1px;
	border-left-width: 1px;
	border-right-width: 2px;
	border-bottom-width: 2px;
	padding: 4px 6px;
	border-color: #eee;
	border-top-color: #f5f5f5;
	border-left-color: #f5f5f5;
	float: left;
	border-radius: 4px;
	background: #fafafa;
	font-size: 12px;
	color: #555;
	text-decoration: none;
}
#cat-types li a:hover {
	border-color: #ccc;
	color: #333;
}
#cat-types li a:active {
	border-top-width: 2px;
	border-left-width: 2px;
	border-right-width: 1px;
	border-bottom-width: 1px;
	background-color: #eee;
}
#cat-types li a.selected {
	background-color: #f0f0f0 !important;
	color: #555;
	cursor: default;
}
.discussion p a img {
	padding: 0 !important;
	border: none !important;
	margin-right: 0 !important;
}
.discussion p {
	margin-bottom: 0;
}
.discussion img.avatar {
	float: none !important;
	padding: 0 !important;
	border: none !important;
	margin: 0 !important;
}
.inlineediting .row2 {
	text-align: right;
}
.inlineediting .tags {
	float: left;
	position: relative;
		z-index: 2;
}
.inlineediting .buttons {
	position: relative;
		z-index: 1;
}
.inlineediting .buttons img {
	vertical-align: middle;
}
#main .inlineediting .buttons button {
	margin: 0 0 0 10px;
}

/*
#
# COLORS
#
*/

body {
	background: #f1f1f1;
}
a, a:visited, h1 a:visited, a:active, #main .selected .actions a, #main .selected .actions a:link, #main .selected .actions a:visited, #help dt, #media-buttons .button {
	color: #3478e3;
}
a:hover, h1 a:hover, #main .selected .actions a:hover, #main .selected .actions a:active, #media-buttons .button:hover {
	color: #d54e21;
}
a:hover {
	border-bottom-color: #bbb;
}
acronym {
	border-bottom-color: rgb(85, 85, 85);
}
code {
	background: #f1f1f1;
}
.category-quote blockquote p,
.format-quote blockquote p {
	color: #888;
	background: #eee;
	text-shadow: 0 1px 0 #fff;
}
h2 {
	color: #555;
}
h3 {
	color: #777;
}
#postlist h4 {
	border-bottom-color: #f0f0f0;
}
#main img.avatar {
	border-color: #ccc;
}
#main #postlist li {
	border-top-color: #bbb;
}
#main #postlist li.inlineediting {
	border-top: 0;
}
#main #postlist .commentlist li {
	border-top-color: #ddd;
}
#main #postlist .commentlist li.bypostauthor {
	border-top-color: #b3c4df;
}
#header .sleeve {
	background: #fff;
}
#header h1 a,
#header small {
	color: #3478e3;
}
#footer {
	background: #fff;
	border-color: #fff;
}
#footer p {
	color: #777;
}
#wrapper {
	background: #fff;
	border-color: #fff;
}
#postbox .avatar img {
	border-color: #ccc;
}
#postbox textarea#posttext, textarea.posttext {
	background: #fafafa;
	border-color: #d1d1d1;
	color: #666;
}
#wrapper form input[type="text"],
#wrapper form input[type="url"],
#wrapper form input[type="email"],
#wrapper form input[type="number"],
#wrapper form input[type="search"],
#wrapper form input[type="password"],
.inlineediting input[type="text"],
.inlineediting input[type="url"],
.inlineediting input[type="email"],
.inlineediting input[type="number"],
.inlineediting input[type="search"],
.inlineediting input[type="password"] {
	border-color: #d1d1d1;
	background: #fafafa;
	color: #666;
}
#sidebar form input[type="text"] {
	background: #fff;
}
#postbox label {
	color: #444;
	float: left;
}
/* ... */

